some more bug fixes

--- a/test/book.html
+++ b/test/book.html
@@ -5551,7 +5551,7 @@ k^\prime\left(x\right)&=\lim_{h\to 0}\frac{k\left(x+h\right)-k\left(x\right)}{h}
 \[
 f\left(x\right)=\begin{cases}
 \hphantom{-}x\,,&\textrm{if }x\ge0\,,\\
--x\,,\textrm{if }x&lt;0\,.
+-x\,,&\textrm{if }x&lt;0\,.
 \end{cases}
 \]
 </div>
@@ -5560,7 +5560,7 @@ f\left(x\right)=\begin{cases}
 \[
 f^\prime\left(x\right)=\begin{cases}
 \hphantom{-}1\,,&\textrm{if }x\gt0\\
--1\,,\textrm{if }x&lt;0
+-1\,,&\textrm{if }x&lt;0
 \end{cases}=\frac{x}{\left|x\right|}=\operatorname{sgn}x
 \]
 </div>
