--- a/test/book copy 2.html
+++ b/test/book copy 2.html
@@ -5803,8 +5803,8 @@ y=f\left(x\right)\,,
 \begin{aligned}
 \left(f_1+f_2+\cdots+f_k+f_{k+1}\right)^\prime&=\left(\underbrace{f_1+f_2+\cdots+f_k}_{\textrm{Let this function be }f}+f_{k+1}\right)^\prime\\
 &=\left(f+f_{k+1}\right)^\prime\\
-&=f\prime+f_{k+1}\prime\\
-&=f_1^\prime+f_2^\prime+\cdots+f_k^\prime+f_{k+1}\prime\,.
+&=f\prime+f_{k+1}^\prime\\
+&=f_1^\prime+f_2^\prime+\cdots+f_k^\prime+f_{k+1}^\prime\,.
 \end{aligned}
 \]
 </div>
