--- a/test/book.html
+++ b/test/book.html
@@ -105,10 +105,10 @@ Paged.registerHandlers(handlers);
 <h1>Who are we?</h1>
 <ul>
 <li>
-<p>Lecturer: COL IMM Ben LAUWENS, PhD MScEng / D30.19 / <a href="mailto:ben.lauwens@mil.be">ben.lauwens@mil.be</a></p>
+<p>Lecturer: Col IMM Ben LAUWENS, PhD MScEng / D30.19 / <a href="mailto:ben.lauwens@mil.be">ben.lauwens@mil.be</a></p>
 </li>
 <li>
-<p>Assistant: Mr Indy VAN DEN BROECK, MSc</p>
+<p>Assistant: Mr Indy VAN DEN BROECK, MSc / <a href="mailto:indy.vandenbroeck@mil.be">indy.vandenbroeck@mil.be</a></p>
 </li>
 </ul>
 </section>
@@ -119,7 +119,7 @@ Paged.registerHandlers(handlers);
 <p>Theory: 24 Hr → 72 Hr</p>
 </li>
 <li>
-<p>Exercises: 20 Hr 	→ 40 Hr</p>
+<p>Exercises: 22 Hr 	→ 44 Hr</p>
 </li>
 </ul>
 </section>
@@ -138,13 +138,13 @@ Paged.registerHandlers(handlers);
 <h1>Evaluations</h1>
 <ul>
 <li>
-<p>Test: 21/11 - 2 Hr: Exercises</p>
+<p>Test: 13/11 - 2 Hr: Exercises</p>
 </li>
 <li>
 <p>Exam:</p>
 <ul>
 <li>
-<p>Theory: oral exam - 5 min access to notes, 1 Hr preparation without notes and 30 min presentation</p>
+<p>Theory: oral exam - 5 min access to notes, 55 min preparation without notes and 30 min presentation</p>
 </li>
 <li>
 <p>Exercises: written exam - 4 Hr without notes</p>
@@ -166,130 +166,142 @@ Paged.registerHandlers(handlers);
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">08/10</td>
+<td style="text-align:center">06/10</td>
 <td style="text-align:center">1-2</td>
 <td style="text-align:center"></td>
 <td style="text-align:left">Introduction and Preliminaries</td>
 </tr>
 <tr>
-<td style="text-align:center">10/10</td>
+<td style="text-align:center">07/10</td>
 <td style="text-align:center">3-4</td>
 <td style="text-align:center"></td>
 <td style="text-align:left">Real Numbers and Functions</td>
 </tr>
 <tr>
-<td style="text-align:center">17/10</td>
+<td style="text-align:center">13/10</td>
+<td style="text-align:center">5-6</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Limits</td>
+</tr>
+<tr>
+<td style="text-align:center">14/10</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">1-2</td>
 <td style="text-align:left">Real Numbers and Functions</td>
 </tr>
 <tr>
-<td style="text-align:center">22/10</td>
-<td style="text-align:center">5-6</td>
+<td style="text-align:center">20/10</td>
+<td style="text-align:center">7-8</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Limits</td>
+<td style="text-align:left">Continuity</td>
 </tr>
 <tr>
-<td style="text-align:center">24/10</td>
+<td style="text-align:center">21/10</td>
+<td style="text-align:center">9-10</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Continuity and Derivatives</td>
+</tr>
+<tr>
+<td style="text-align:center">27/10</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">3-4</td>
 <td style="text-align:left">Limits</td>
 </tr>
 <tr>
-<td style="text-align:center">29/10</td>
-<td style="text-align:center">7-8</td>
-<td style="text-align:center"></td>
-<td style="text-align:left">Continuity</td>
-</tr>
-<tr>
-<td style="text-align:center">31/10</td>
+<td style="text-align:center">28/10</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">5-6</td>
 <td style="text-align:left">Continuity</td>
 </tr>
 <tr>
-<td style="text-align:center">05/11</td>
-<td style="text-align:center">9-10</td>
+<td style="text-align:center">03/11</td>
+<td style="text-align:center">11-12</td>
 <td style="text-align:center"></td>
 <td style="text-align:left">Derivatives and Differentials</td>
 </tr>
 <tr>
-<td style="text-align:center">07/11</td>
+<td style="text-align:center">04/11</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">7-8</td>
 <td style="text-align:left">Derivatives and Differentials</td>
 </tr>
 <tr>
-<td style="text-align:center">12/11</td>
-<td style="text-align:center">11-12</td>
+<td style="text-align:center">13/11</td>
+<td style="text-align:center">13-14</td>
 <td style="text-align:center"></td>
 <td style="text-align:left">Applications of Differentiation</td>
 </tr>
 <tr>
-<td style="text-align:center">14/11</td>
+<td style="text-align:center">17/11</td>
+<td style="text-align:center">15-16</td>
+<td style="text-align:center"></td>
+<td style="text-align:left">Trancendental Functions</td>
+</tr>
+<tr>
+<td style="text-align:center">18/11</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">9-10</td>
 <td style="text-align:left">Applications of Differentiation</td>
 </tr>
 <tr>
-<td style="text-align:center">19/11</td>
-<td style="text-align:center">13-14</td>
-<td style="text-align:center"></td>
-<td style="text-align:left">Trancendental Functions</td>
-</tr>
-<tr>
-<td style="text-align:center">21/11</td>
+<td style="text-align:center">24/11</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">11-12</td>
+<td style="text-align:left">Applications of Differentiation</td>
+</tr>
+<tr>
+<td style="text-align:center">25/11</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">13-14</td>
 <td style="text-align:left">Trancendental Functions</td>
 </tr>
 <tr>
-<td style="text-align:center">26/11</td>
-<td style="text-align:center">15-16</td>
-<td style="text-align:center"></td>
-<td style="text-align:left">Integrals</td>
-</tr>
-<tr>
-<td style="text-align:center">28/11</td>
-<td style="text-align:center"></td>
-<td style="text-align:center">13-14</td>
-<td style="text-align:left">Integrals</td>
-</tr>
-<tr>
-<td style="text-align:center">03/12</td>
+<td style="text-align:center">01/12</td>
 <td style="text-align:center">17-18</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Integration Techniques</td>
+<td style="text-align:left">Integrals</td>
 </tr>
 <tr>
-<td style="text-align:center">05/12</td>
+<td style="text-align:center">22/12</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">15-16</td>
-<td style="text-align:left">Integration Techniques</td>
+<td style="text-align:left">Integrals</td>
 </tr>
 <tr>
-<td style="text-align:center">10/12</td>
+<td style="text-align:center">08/12</td>
 <td style="text-align:center">19-20</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+<td style="text-align:left">Integration Techniques</td>
 </tr>
 <tr>
-<td style="text-align:center">12/12</td>
+<td style="text-align:center">09/12</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">17-18</td>
-<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+<td style="text-align:left">Integration Techniques</td>
 </tr>
 <tr>
-<td style="text-align:center">17/12</td>
+<td style="text-align:center">15/12</td>
 <td style="text-align:center">21-22</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Sequences, Infinite Series and Power Series</td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
 </tr>
 <tr>
-<td style="text-align:center">19/12</td>
+<td style="text-align:center">16/12</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">19-20</td>
-<td style="text-align:left">Sequences, Infinite Series and Power Series</td>
+<td style="text-align:left">Polar Coordinates and Parametric Curves</td>
+</tr>
+<tr>
+<td style="text-align:center">22/12</td>
+<td style="text-align:center">23-24</td>
+<td style="text-align:center"></td>
+<td style="text-align:left"><i>Sequences, Infinite Series and Power Series</i></td>
+</tr>
+<tr>
+<td style="text-align:center">23/12</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">21-22</td>
+<td style="text-align:left"><i>Sequences, Infinite Series and Power Series</i></td>
 </tr>
 </tbody>
 </table>
