--- a/test/preface.html
+++ b/test/preface.html
@@ -13,7 +13,6 @@
 
 </head>
 <body data-type="article">
-<div id="tag"></div>
 <section data-type="preface" class="pagereset" >
 <h1>Preface</h1>
 <section data-type="sect1">
@@ -23,7 +22,7 @@
 <p>Lecturer: Col IMM Ben LAUWENS, PhD MScEng / D30.19 / <a href="mailto:ben.lauwens@mil.be">ben.lauwens@mil.be</a></p>
 </li>
 <li>
-<p>Assistant: Mr Indy VAN DEN BROECK, MSc / <a href="mailto:indy.vandenbroeck@mil.be">indy.vandenbroeck@mil.be</a></p>
+<p>Assistant: Mr Indy VAN DEN BROECK, MSc / D30.17 / <a href="mailto:indy.vandenbroeck@mil.be">indy.vandenbroeck@mil.be</a></p>
 </li>
 </ul>
 </section>
@@ -174,25 +173,32 @@
 <td style="text-align:center">01/12</td>
 <td style="text-align:center">17-18</td>
 <td style="text-align:center"></td>
+<div id="tag"></div>
 <td style="text-align:left">Integrals</td>
 </tr>
 <tr>
-<td style="text-align:center">22/12</td>
+<td style="text-align:center">02/12</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">15-16</td>
-<td style="text-align:left">Integrals</td>
+<td style="text-align:left">Integrals - Integration Techniques</td>
 </tr>
 <tr>
 <td style="text-align:center">08/12</td>
 <td style="text-align:center">19-20</td>
 <td style="text-align:center"></td>
+<td style="text-align:left">Integration Techniques - Applications of Integration</td>
+</tr>
+<tr>
+<td style="text-align:center">08/12-12/12</td>
+<td style="text-align:center"></td>
+<td style="text-align:center">17</td>
 <td style="text-align:left">Integration Techniques</td>
 </tr>
 <tr>
 <td style="text-align:center">09/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">17-18</td>
-<td style="text-align:left">Integration Techniques</td>
+<td style="text-align:center">18-19</td>
+<td style="text-align:left">Integration Techniques - Applications of Integration</td>
 </tr>
 <tr>
 <td style="text-align:center">15/12</td>
@@ -203,7 +209,7 @@
 <tr>
 <td style="text-align:center">16/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">19-20</td>
+<td style="text-align:center">20-21</td>
 <td style="text-align:left">Polar Coordinates and Parametric Curves</td>
 </tr>
 <tr>
@@ -215,7 +221,7 @@
 <tr>
 <td style="text-align:center">23/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">21-22</td>
+<td style="text-align:center">22-23</td>
 <td style="text-align:left"><i>Sequences, Infinite Series and Power Series</i></td>
 </tr>
 </tbody>
