--- a/test/matlab.html
+++ b/test/matlab.html
@@ -22,7 +22,7 @@
 <p>Lecturer: Col IMM Ben LAUWENS, PhD MScEng / D30.19 / <a href="mailto:ben.lauwens@mil.be">ben.lauwens@mil.be</a></p>
 </li>
 <li>
-<p>Assistant: Mr Jean-François DE KEMMETER, PhD MSc / <a href="mailto:jean-francois.dekemmeter@mil.be">jean-francois.dekemmeter@mil.be</a></p>
+<p>Assistant: Mr Jean-François DE KEMMETER, PhD MSc / D30.17 / <a href="mailto:jean-francois.dekemmeter@mil.be">jean-francois.dekemmeter@mil.be</a></p>
 </li>
 </ul>
 </section>
@@ -84,7 +84,7 @@
 <td style="text-align:center">17/10</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">1</td>
-<td style="text-align:left">About MATLAB</td>
+<td style="text-align:left">MATLAB Environment</td>
 </tr>
 <tr>
 <td style="text-align:center">23/10</td>
@@ -102,11 +102,10 @@
 <td style="text-align:center">30/10</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">2-3</td>
-<td style="text-align:left">MATLAB Environment - Build-in MATLAB functions</td>
+<td style="text-align:left">Build-in MATLAB functions</td>
 </tr>
 <tr>
 <td style="text-align:center">31/10</td>
-<div id="tag"></div>
 <td style="text-align:center"></td>
 <td style="text-align:center">4</td>
 <td style="text-align:left">Manipulating Matlab</td>
@@ -139,7 +138,7 @@
 <td style="text-align:center">21/11</td>
 <td style="text-align:center">12</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Matrix Algebra</td>
+<td style="text-align:left">Symbolic Mathematics</td>
 </tr>
 <tr>
 <td style="text-align:center">27/11</td>
@@ -151,7 +150,7 @@
 <td style="text-align:center">28/11</td>
 <td style="text-align:center">13</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Matrix Algebra</td>
+<td style="text-align:left">Symbolic Mathematics</td>
 </tr>
 <tr>
 <td style="text-align:center">04/12</td>
@@ -163,31 +162,26 @@
 <td style="text-align:center">05/12</td>
 <td style="text-align:center">14</td>
 <td style="text-align:center"></td>
-<td style="text-align:left">Symbolic Mathematics</td>
+<td style="text-align:left">Matrix Algebra</td>
 </tr>
 <tr>
 <td style="text-align:center">11/12</td>
 <td style="text-align:center"></td>
 <td style="text-align:center">12-13</td>
-<td style="text-align:left">Repetition Structures - Matrix Algebra</td>
+<td style="text-align:left">Repetition Structures - Symbolic Mathematics</td>
 </tr>
 <tr>
 <td style="text-align:center">12/12</td>
-<td style="text-align:center">15</td>
 <td style="text-align:center"></td>
+<div id="tag"></div>
+<td style="text-align:center">14</td>
 <td style="text-align:left">Symbolic Mathematics</td>
 </tr>
 <tr>
 <td style="text-align:center">18/12</td>
 <td style="text-align:center"></td>
-<td style="text-align:center">14-15</td>
-<td style="text-align:left">Matrix Algebra - Symbolic Mathematics</td>
-</tr>
-<tr>
-<td style="text-align:center">19/12</td>
-<td style="text-align:center"></td>
-<td style="text-align:center">16</td>
-<td style="text-align:left">Symbolic Mathematics</td>
+<td style="text-align:center">15-16</td>
+<td style="text-align:left">Matrix Algebra</td>
 </tr>
 </tbody>
 </table>
