--- a/test/book.html
+++ b/test/book.html
@@ -1483,7 +1483,7 @@ Paged.registerHandlers(handlers);
 <p>There exists <span class="math-tex" data-type="tex">\(-a\in 𝔽\)</span> such that <span class="math-tex" data-type="tex">\(a+\left(-a\right)=0\)</span> (<i>opposite</i>) and for <span class="math-tex" data-type="tex">\(a\ne 0\)</span> there exists <span class="math-tex" data-type="tex">\(a^{-1}=\frac{1}{a}\in 𝔽\)</span> such that <span class="math-tex" data-type="tex">\(a\cdot a^{-1}=1\)</span> (<i>inverse</i>)</p>
 </li>
 <li>
-<p><span class="math-tex" data-type="tex">\(a\left(b+c\right)=ab+bc\)</span> (<i>distributivity</i>)</p>
+<p><span class="math-tex" data-type="tex">\(a\left(b+c\right)=ab+ac\)</span> (<i>distributivity</i>)</p>
 </li>
 </ol>
 </div>
@@ -1806,7 +1806,7 @@ a_1\cdot a_2\cdot\dots\cdot a_n&\textrm{if }n\in \mathbb{N}_0
 <p>The completeness axiom has massive consequences.</p>
 <div data-type="lemma">
 <h1></h1>
-<p>The set of natural numbers is not bounded above or <span class="math-tex" data-type="tex">\(\forall r\in \mathbb{R},\exists n\in \mathbb{N}:r&gt;n\)</span>.</p>
+<p>The set of natural numbers is not bounded above or <span class="math-tex" data-type="tex">\(\forall r\in \mathbb{R},\exists n\in \mathbb{N}:r\leq n\)</span>.</p>
 </div>
 <div data-type="proof">
 <h1>&nbsp;(by contradiction)</h1>
