typo in chapter 3

--- a/test/book.html
+++ b/test/book.html
@@ -4550,8 +4550,8 @@ f\left(x\right)=&\frac{x}{\sqrt{x^2+1}}=\frac{x}{\sqrt{x^2\left(1+\frac{1}{x^2}\
 <p>Although a function cannot have a limit at an endpoint of its domain, it can still have a one-sided limit there. We extend the definition of continuity to provide for such situations.</p>
 <div data-type="definition">
 <h1></h1>
-<p>We say that <span class="math-tex" data-type="tex">\(f\)</span> is <i>right continuous</i> at <span class="math-tex" data-type="tex">\(c\)</span> if <span class="math-tex" data-type="tex">\(\displaystyle\lim_{x\to c^+}f\left(x\right)=f\left(x\right)\)</span>.</p>
-<p>We say that <span class="math-tex" data-type="tex">\(f\)</span> is <i>left continuous</i> at <span class="math-tex" data-type="tex">\(c\)</span> if <span class="math-tex" data-type="tex">\(\displaystyle\lim_{x\to c^-}f\left(x\right)=f\left(x\right)\)</span>.</p>
+<p>We say that <span class="math-tex" data-type="tex">\(f\)</span> is <i>right continuous</i> at <span class="math-tex" data-type="tex">\(c\)</span> if <span class="math-tex" data-type="tex">\(\displaystyle\lim_{x\to c^+}f\left(x\right)=f\left(c\right)\)</span>.</p>
+<p>We say that <span class="math-tex" data-type="tex">\(f\)</span> is <i>left continuous</i> at <span class="math-tex" data-type="tex">\(c\)</span> if <span class="math-tex" data-type="tex">\(\displaystyle\lim_{x\to c^-}f\left(x\right)=f\left(c\right)\)</span>.</p>
 </div>
 <div data-type="example">
 <h1></h1>
