And another typo in chapter04

--- a/test/book.html
+++ b/test/book.html
@@ -5743,7 +5743,7 @@ y=f\left(x\right)\,,
 <p>If <span class="math-tex" data-type="tex">\(g\left(x\right)\)</span> is continuous on an interval <span class="math-tex" data-type="tex">\(I\)</span>, then <span class="math-tex" data-type="tex">\(g\left(x\right)=f^\prime\left(x\right)\)</span> for some function <span class="math-tex" data-type="tex">\(f\)</span> that is differentiable on <span class="math-tex" data-type="tex">\(I\)</span> . We will discuss this fact further in Chapter 6.</p>
 <section data-type="sect1">
 <h1>Differentiation Rules</h1>
-<p>If every derivative had to be calculated directly from the definition of derivative as in the examples of the previou section, calculus would indeed be a painful subject. Fortunately, there is an easier way. We will develop several general differentiation rules that enable us to calculate the derivatives of complicated combinations of functions easily if we already know the derivatives of the elementary functions from which they are constructed.</p>
+<p>If every derivative had to be calculated directly from the definition of derivative as in the examples of the previous section, calculus would indeed be a painful subject. Fortunately, there is an easier way. We will develop several general differentiation rules that enable us to calculate the derivatives of complicated combinations of functions easily if we already know the derivatives of the elementary functions from which they are constructed.</p>
 <p>Before developing these differentiation rules we need to establish one obvious but very important theorem which states, roughly, that the graph of a function cannot possibly have a break at a point where it is smooth.</p>
 <div data-type="theorem">
 <h1></h1>
@@ -5880,7 +5880,7 @@ y=f\left(x\right)\,,
 \[
 \begin{aligned}
 \left(fgh\right)^\prime\left(x\right)&=f^\prime\left(x\right)\left(gh\right)\left(x\right)+f\left(x\right)\left(gh\right)^\prime\left(x\right)\\
-&=f^\prime\left(x\right)g\left(x\right)h\left(x\right)+f^\prime\left(x\right)g^\prime\left(x\right)h\left(x\right)+f^\prime\left(x\right)g\left(x\right)h^\prime\left(x\right)\,.
+&=f^\prime\left(x\right)g\left(x\right)h\left(x\right)+f^\left(x\right)g^\prime\left(x\right)h\left(x\right)+f^\left(x\right)g\left(x\right)h^\prime\left(x\right)\,.
 \end{aligned}
 \]
 </div>
@@ -6043,7 +6043,7 @@ f\left(g\left(x+h\right)\right)-f\left(g\left(x\right)\right)=\left(f^\prime\lef
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-\frac{\mathrm{d}\hphantom{ y}}{\mathrm{d} x}f\left(g\left(x\right)\right)&=\lim_{h\to 0}\frac{f\left(g+h\left(x\right)\right)-f\left(g\left(x\right)\right)}{h}\\
+\frac{\mathrm{d}\hphantom{ y}}{\mathrm{d} x}f\left(g\left(x\right)\right)&=\lim_{h\to 0}\frac{f\left(g\left(x+h\right)\right)-f\left(g\left(x\right)\right)}{h}\\
 &=\lim_{h\to 0}\left(f^\prime\left(g\left(x\right)\right)+E\left(k\right)\right)\frac{g\left(x+h\right)-g\left(x\right)}{h}\\
 &=\left(f^\prime\left(g\left(x\right)\right)+0\right)g^\prime\left(x\right)=f^\prime\left(g\left(x\right)\right)g^\prime\left(x\right)\,,
 \end{aligned}
@@ -6514,7 +6514,7 @@ x^2+y^2=25
 \]
 </div>
 <p>so <span class="math-tex" data-type="tex">\(F\left(x,y\right)=x^2+y^2-25\)</span> for that circle.</p>
-<p>Sometimes we can solve an equation <span class="math-tex" data-type="tex">\(F\left(x,y\right)=0\)</span> for <span class="math-tex" data-type="tex">\(y\)</span> and so find explicit formulas for one or more functions <span class="math-tex" data-type="tex">\(y=f\left(x\right)\)</span> defined by the equation. Usually, however, we are not able to solve the equation. However, we can still regard it as defining yas one or more functions of <span class="math-tex" data-type="tex">\(x\)</span> implicitly, even it we cannot solve for these functions explicitly. Moreover, we still find the derivative <span class="math-tex" data-type="tex">\(\frac{\mathrm{d} y}{\mathrm{d} x}\)</span> of these implicit solutions by a technique called <i>implicit differentiation</i>. The idea is to differentiate the given equation with respect to <span class="math-tex" data-type="tex">\(x\)</span>, regarding <span class="math-tex" data-type="tex">\(y\)</span> as a function of <span class="math-tex" data-type="tex">\(x\)</span> having derivative <span class="math-tex" data-type="tex">\(\frac{\mathrm{d} y}{\mathrm{d} x}\)</span>, or <span class="math-tex" data-type="tex">\(y^\prime\)</span>.</p>
+<p>Sometimes we can solve an equation <span class="math-tex" data-type="tex">\(F\left(x,y\right)=0\)</span> for <span class="math-tex" data-type="tex">\(y\)</span> and so find explicit formulas for one or more functions <span class="math-tex" data-type="tex">\(y=f\left(x\right)\)</span> defined by the equation. Usually, however, we are not able to solve the equation. However, we can still regard it as defining <span class="math-tex" data-type="tex">\(y\)</span>as one or more functions of <span class="math-tex" data-type="tex">\(x\)</span> implicitly, even it we cannot solve for these functions explicitly. Moreover, we still find the derivative <span class="math-tex" data-type="tex">\(\frac{\mathrm{d} y}{\mathrm{d} x}\)</span> of these implicit solutions by a technique called <i>implicit differentiation</i>. The idea is to differentiate the given equation with respect to <span class="math-tex" data-type="tex">\(x\)</span>, regarding <span class="math-tex" data-type="tex">\(y\)</span> as a function of <span class="math-tex" data-type="tex">\(x\)</span> having derivative <span class="math-tex" data-type="tex">\(\frac{\mathrm{d} y}{\mathrm{d} x}\)</span>, or <span class="math-tex" data-type="tex">\(y^\prime\)</span>.</p>
 <div data-type="example">
 <h1></h1>
 <p>Find <span class="math-tex" data-type="tex">\(\frac{\mathrm{d} y}{\mathrm{d} x}\)</span> if <span class="math-tex" data-type="tex">\(y^2=x\)</span>.</p>
@@ -6768,7 +6768,7 @@ x=f\left(y\right)=y^3+y &\implies 1=(3y^2+1)y^\prime\\
 \frac{f\left(x\right)-f\left(c\right)}{x-c}\ge0\,,\quad\textrm{so }f^\prime\left(c\right)=\lim_{x\to c^-}\frac{f\left(x\right)-f\left(c\right)}{x-c}\ge0\,.
 \]
 </div>
-<p>Thus <span class="math-tex" data-type="tex">\(f^\prime\left(c\right)\)</span>. The proof for a minimum value at <span class="math-tex" data-type="tex">\(c\)</span> is similar.</p>
+<p>Thus <span class="math-tex" data-type="tex">\(f^\prime\left(c\right)=0\)</span>. The proof for a minimum value at <span class="math-tex" data-type="tex">\(c\)</span> is similar.</p>
 </div>
 <div data-type="theorem">
 <h1>&nbsp;(Rolle's theorem)</h1>
