An now without error

--- a/test/book.html
+++ b/test/book.html
@@ -5880,7 +5880,7 @@ y=f\left(x\right)\,,
 \[
 \begin{aligned}
 \left(fgh\right)^\prime\left(x\right)&=f^\prime\left(x\right)\left(gh\right)\left(x\right)+f\left(x\right)\left(gh\right)^\prime\left(x\right)\\
-&=f^\prime\left(x\right)g\left(x\right)h\left(x\right)+f^\left(x\right)g^\prime\left(x\right)h\left(x\right)+f^\left(x\right)g\left(x\right)h^\prime\left(x\right)\,.
+&=f^\prime\left(x\right)g\left(x\right)h\left(x\right)+f\left(x\right)g^\prime\left(x\right)h\left(x\right)+f\left(x\right)g\left(x\right)h^\prime\left(x\right)\,.
 \end{aligned}
 \]
 </div>
