--- a/test/book.html
+++ b/test/book.html
@@ -9868,7 +9868,7 @@ F^\prime\left(x_0\right)=f\left(x_0\right)\,.
 <p>Let <span class="math-tex" data-type="tex">\(\varepsilon &gt;0\)</span>. If <span class="math-tex" data-type="tex">\(\left|x-y\right|&lt;\frac{\varepsilon}{B}\)</span> for <span class="math-tex" data-type="tex">\(a\le x&lt; y\le b\)</span>, then</p>
 <div class="math-tex" data-type="equation">
 \[
-\left|F\left(y\right)-F\left(x\right)\right|=\left|\int_y^xf\left(t\right)\,\mathrm{d} t\right|\le \int_y^x\left|f\left(t\right)\right|\,\mathrm{d} t\le\int_y^xB,\mathrm{d} t=B\left(y-x\right)&lt;\varepsilon\,.
+\left|F\left(y\right)-F\left(x\right)\right|=\left|\int_x^yf\left(t\right)\,\mathrm{d} t\right|\le \int_x^y\left|f\left(t\right)\right|\,\mathrm{d} t\le\int_x^yB,\mathrm{d} t=B\left(y-x\right)&lt;\varepsilon\,.
 \]
 </div>
 <p>This shows that <span class="math-tex" data-type="tex">\(F\)</span> is (uniformly) continuous on <span class="math-tex" data-type="tex">\(\left[a,b\right]\)</span>.</p>
@@ -10032,7 +10032,7 @@ I=2\int_1^3\cos u\,\mathrm{d} u=\left.2\sin u\right|_1^3=2\sin 3-2\sin 1\,.
 \end{aligned}
 \]
 </div>
-<p>All of these can, of course, be checked by differentiating the right-hand sides. They can be evaluated directly by rewriting<span class="math-tex" data-type="tex">\(\tan x\)</span> or <span class="math-tex" data-type="tex">\(\\cot x\)</span> in terms of <span class="math-tex" data-type="tex">\(\sin x\)</span> and <span class="math-tex" data-type="tex">\(\cos x\)</span> and using an appropriate substitution. For example,</p>
+<p>All of these can, of course, be checked by differentiating the right-hand sides. They can be evaluated directly by rewriting <span class="math-tex" data-type="tex">\(\tan x\)</span> or <span class="math-tex" data-type="tex">\(\cot x\)</span> in terms of <span class="math-tex" data-type="tex">\(\sin x\)</span> and <span class="math-tex" data-type="tex">\(\cos x\)</span> and using an appropriate substitution. For example,</p>
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
@@ -10173,7 +10173,7 @@ Q\left(x\right)=K\left(x-a_1\right)^{m_1}\left(x-a_2\right)^{m_2}\cdots\left(x-a
 </div>
 </li>
 <li>
-<p>corresponding to each factor <span class="math-tex" data-type="tex">\(\left(x^2+bx+c\right)^m\)</span> of <span class="math-tex" data-type="tex">\(Q\left(x\right)\)</span> the decomposition contains a sum of fractions of the form</p>
+<p>corresponding to each factor <span class="math-tex" data-type="tex">\(\left(x^2+bx+c\right)^n\)</span> of <span class="math-tex" data-type="tex">\(Q\left(x\right)\)</span> the decomposition contains a sum of fractions of the form</p>
 <div class="math-tex" data-type="equation">
 \[
 \frac{B_1x+C_1}{x^2+bx+c^2}+\frac{B_2x+C_2}{\left(x^2+bx+c^2\right)^2}+\cdots+\frac{B_nx+C_n}{\left(x^2+bx+c^2\right)^n}\,.
@@ -10205,9 +10205,9 @@ Q\left(x\right)=K\left(x-a_1\right)^{m_1}\left(x-a_2\right)^{m_2}\cdots\left(x-a
 \begin{aligned}
 4A + 2B \hphantom{+ 2C + D + E} = 0&\quad\left(\textrm{coefficient of }x^4\right)\\
 \hphantom{4A + 2B +} 2C \hphantom{+ D + E} = 0&\quad\left(\textrm{coefficient of }x^3\right)\\
-4A + 2B \hphantom{ + 2C }+ D \hphantom{+ E} = 0&\quad\left(\textrm{coefficient of }x^2\right)\\
+4A + \hphantom{2}B \hphantom{ + 2C }+ D \hphantom{+ E} = 1&\quad\left(\textrm{coefficient of }x^2\right)\\
 \hphantom{4A + 2B + 2}C \hphantom{+ D} + E = 0&\quad\left(\textrm{coefficient of }x^1\right)\\
-\hphantom{4}A \hphantom{+ 2B + 2C + D + E} = 0&\quad\left(\textrm{coefficient of }x^0\right)\,.
+\hphantom{4}A \hphantom{+ 2B + 2C + D + E} = 2&\quad\left(\textrm{coefficient of }x^0\right)\,.
 \end{aligned}
 \]
 </div>
@@ -10215,10 +10215,10 @@ Q\left(x\right)=K\left(x-a_1\right)^{m_1}\left(x-a_2\right)^{m_2}\cdots\left(x-a
 <div class="math-tex" data-type="equation">
 \[
 \begin{aligned}
-\int\frac{x^2+2}{4x^5+4x^3+x}\,\mathrm{d} x&=\,2\int\frac{1}{x}\,\mathrm{d} x-4\int\frac{x}{2x^2+1}\,\mathrm{d} x-3\int\frac{x}{\left(2x^2+1\right)^2}\\
+\int\frac{x^2+2}{4x^5+4x^3+x}\,\mathrm{d} x&=\,2\int\frac{1}{x}\,\mathrm{d} x-4\int\frac{x}{2x^2+1}\,\mathrm{d} x-3\int\frac{x}{\left(2x^2+1\right)^2}\,\mathrm{d} x\\
 &\quad\textrm{Let }u=2x^2+1\,\mathrm{d} x\textrm{, then }\mathrm{d} u=4x\,\mathrm{d} x\\
 &=\,2\ln\left|x\right|-\int\frac{1}{u}\,\mathrm{d} u-\frac{3}{4}\int\frac{1}{u ^2}\,\mathrm{d} u\\
-&=\,2\ln\left|x\right|-\ln\left|u\right|=\frac{3}{4}\frac{1}{u}+C\\
+&=\,2\ln\left|x\right|-\ln\left|u\right|+\frac{3}{4}\frac{1}{u}+C\\
 &=\,\ln\left(\frac{x^2}{2x^2+1}\right)+\frac{3}{4}\frac{1}{2x^2+1}+C\,.
 \end{aligned}
 \]
@@ -10248,7 +10248,7 @@ Q\left(x\right)=K\left(x-a_1\right)^{m_1}\left(x-a_2\right)^{m_2}\cdots\left(x-a
 \]
 </div>
 </div>
-<p>(2) Integrals involving <span class="math-tex" data-type="tex">\(\sqrt{a^2+x^2}\)</span> or <span class="math-tex" data-type="tex">\(\frac{1}{x^2+x^2}\)</span> (where <span class="math-tex" data-type="tex">\(a&gt;0\)</span>) can frequently be reduced to a simpler form by means of the substitution <span class="math-tex" data-type="tex">\(x=a\tan\theta\)</span>.</p>
+<p>(2) Integrals involving <span class="math-tex" data-type="tex">\(\sqrt{a^2+x^2}\)</span> or <span class="math-tex" data-type="tex">\(\frac{1}{a^2+x^2}\)</span> (where <span class="math-tex" data-type="tex">\(a&gt;0\)</span>) can frequently be reduced to a simpler form by means of the substitution <span class="math-tex" data-type="tex">\(x=a\tan\theta\)</span>.</p>
 <p>Since <span class="math-tex" data-type="tex">\(x\)</span> can take any real value, we have <span class="math-tex" data-type="tex">\(-\frac{\uppi}{2}&lt;\theta&lt;\frac{\uppi}{2}\)</span>, so <span class="math-tex" data-type="tex">\(\sec\theta&gt;0\)</span> and</p>
 <div class="math-tex" data-type="equation">
 \[
@@ -10313,7 +10313,7 @@ Q\left(x\right)=K\left(x-a_1\right)^{m_1}\left(x-a_2\right)^{m_2}\cdots\left(x-a
 \]
 </div>
 </div>
-<p>(5) Similarly, the inverse hyperbolic substitution <span class="math-tex" data-type="tex">\(x=\operatorname{arcsinh} u\)</span> can be used instead of the inverse tangent substitution <span class="math-tex" data-type="tex">\(x=a\tan\theta\)</span> to simplify integrals involving <span class="math-tex" data-type="tex">\(\sqrt{a^2+x^2}\)</span> or <span class="math-tex" data-type="tex">\(\frac{1}{x^2+x^2}\)</span>. In this case we have <span class="math-tex" data-type="tex">\(\mathrm{d} x = a\cosh u\,\mathrm{d} u\)</span> and <span class="math-tex" data-type="tex">\(x^2+a^2=a^2\cosh^2 u\)</span>, and we may need the result</p>
+<p>(5) Similarly, the inverse hyperbolic substitution <span class="math-tex" data-type="tex">\(x=\operatorname{arcsinh} u\)</span> can be used instead of the inverse tangent substitution <span class="math-tex" data-type="tex">\(x=a\tan\theta\)</span> to simplify integrals involving <span class="math-tex" data-type="tex">\(\sqrt{a^2+x^2}\)</span> or <span class="math-tex" data-type="tex">\(\frac{1}{a^2+x^2}\)</span>. In this case we have <span class="math-tex" data-type="tex">\(\mathrm{d} x = a\cosh u\,\mathrm{d} u\)</span> and <span class="math-tex" data-type="tex">\(x^2+a^2=a^2\cosh^2 u\)</span>, and we may need the result</p>
 <div class="math-tex" data-type="equation">
 \[
 \operatorname{arcsinh}x=\ln\left(x+\sqrt{x^2+1}\right)
@@ -10457,7 +10457,7 @@ A&=\int_0^\frac{3\uppi}{2}\left|\cos x\right|\,\mathrm{d} x\\
 </div>
 <section data-type="sect2">
 <h2>Areas Between Two Curves</h2>
-<p>Suppose that a plane region <span class="math-tex" data-type="tex">\(R\)</span> is bounded by the graphs of two continuous functions, <span class="math-tex" data-type="tex">\(y=f\left(x\right)\)</span> and <span class="math-tex" data-type="tex">\(y=g\left(x\right)\)</span>, and the vertical straight lines <span class="math-tex" data-type="tex">\(x=a\)</span> and <span class="math-tex" data-type="tex">\(x=b\)</span>, as shown in the figure.</p>
+<p>Suppose that a plane region <span class="math-tex" data-type="tex">\(R\)</span> is bounded by the graphs of two continuous functions, <span class="math-tex" data-type="tex">\(y=f\left(x\right)\)</span> and <span class="math-tex" data-type="tex">\(y=g\left(x\right)\)</span>, and the vertical straight lines <span class="math-tex" data-type="tex">\(x=a\)</span> and <span class="math-tex" data-type="tex">\(x=b\)</span>.</p>
 <p>Assume that <span class="math-tex" data-type="tex">\(a&lt;b\)</span> and that <span class="math-tex" data-type="tex">\(f\left(x\right)\le g\left(x\right)\)</span> on <span class="math-tex" data-type="tex">\(\left[a,b\right]\)</span>, so the graph of <span class="math-tex" data-type="tex">\(f\)</span> lies below that of <span class="math-tex" data-type="tex">\(g\)</span>. If <span class="math-tex" data-type="tex">\(f\left(x\right)\ge 0\)</span> on <span class="math-tex" data-type="tex">\(\left[a,b\right]\)</span> then the area <span class="math-tex" data-type="tex">\(A\)</span> of <span class="math-tex" data-type="tex">\(R\)</span> is the area above the <span class="math-tex" data-type="tex">\(x\)</span>-axis and under the graph of <span class="math-tex" data-type="tex">\(g\)</span> minus the area above the <span class="math-tex" data-type="tex">\(x\)</span>-axis and under the graph of <span class="math-tex" data-type="tex">\(f\)</span>:</p>
 <div class="math-tex" data-type="equation">
 \[
