--- a/test/book.html
+++ b/test/book.html
@@ -10793,7 +10793,7 @@ x=t^3-3t\quad\textrm{and}\quad y=t^2\,,\quad -2\le t\le 2\,.
 <p>We could eliminate the parameter and obtain</p>
 <div class="math-tex" data-type="equation">
 \[
-x^2=t^2\left(t^2-3\right)^2=y\left(y-2\right)^2\,,
+x^2=t^2\left(t^2-3\right)^2=y\left(y-3\right)^2\,,
 \]
 </div>
 <p>but this doesn’t help much since we do not recognize this curve from its Cartesian equation. Instead, let us calculate the coordinates of some points:</p>
@@ -10851,8 +10851,8 @@ x^2=t^2\left(t^2-3\right)^2=y\left(y-2\right)^2\,,
 \]
 </div>
 <p>For <span class="math-tex" data-type="tex">\(t=0\)</span> the curve is at <span class="math-tex" data-type="tex">\(\left(0,0\right)\)</span>, but for <span class="math-tex" data-type="tex">\(t=\pm\sqrt 3\)</span> the curve is at <span class="math-tex" data-type="tex">\(\left(0,3\right)\)</span>. The selfintersection occurs because the curve passes through the same point for two different values of the parameter.</p>
-<p>According to the defintion, a parametric curve always involves a particular set of parametric equations; it is not just a set of points in the plane. When we are interested in considering a curve solely as a set of points (a geometric object), we need not be concerned with any particular pair of parametric equations representing that curve. In this case we call the curve simply a <i>plane curve</i>.</p>
 </div>
+<p>According to the definition, a parametric curve always involves a particular set of parametric equations; it is not just a set of points in the plane. When we are interested in considering a curve solely as a set of points (a geometric object), we need not be concerned with any particular pair of parametric equations representing that curve. In this case we call the curve simply a <i>plane curve</i>.</p>
 <div data-type="definition">
 <h1></h1>
 <p>A plane curve is a set of points <span class="math-tex" data-type="tex">\(\left(x,y\right)\)</span> in the plane such that <span class="math-tex" data-type="tex">\(x=f\left(t\right)\)</span> and <span class="math-tex" data-type="tex">\(y=g\left(t\right)\)</span> for some <span class="math-tex" data-type="tex">\(t\)</span> in an interval <span class="math-tex" data-type="tex">\(I\)</span>, where <span class="math-tex" data-type="tex">\(f\)</span> and <span class="math-tex" data-type="tex">\(g\)</span> are continuous functions defined on <span class="math-tex" data-type="tex">\(I\)</span>. Any such interval <span class="math-tex" data-type="tex">\(I\)</span> and function pair <span class="math-tex" data-type="tex">\(\left(f, g\right)\)</span> that generate the points of <span class="math-tex" data-type="tex">\(𝒞\)</span> is called a <i>parametrization</i> of <span class="math-tex" data-type="tex">\(𝒞\)</span>.</p>
@@ -11098,7 +11098,7 @@ x=a\cos^3 t\quad\textrm{and}\quad y=a\sin^3 t\,,\quad\textrm{where }a&gt;0\,
 <p>Therefore, the required surface area is</p>
 <div class="math-tex" data-type="equation">
 \[
-S = 2 \times 2\uppi\int_0^\frac{\uppi}{2}a\sin^3 t\,3a\cos t\sin t\mathrm{d} t=\frac{12}{5}\uppi a\ \textrm{square units.}
+S = 2 \times 2\uppi\int_0^\frac{\uppi}{2}a\sin^3 t\,3a\cos t\sin t\mathrm{d} t=\frac{12}{5}\uppi a^2\ \textrm{square units.}
 \]
 </div>
 </div>
